@@ -2218,23 +2218,7 @@ ENDMACRO()
 #
 MACRO(TRIBITS_ADJUST_PACKAGE_ENABLES)
 
-  # Provide backward compatible support for ${PROJECT_NAME}_ENABLE_SECONDARY_STABLE_CODE
-  IF (${PROJECT_NAME}_ENABLE_SECONDARY_STABLE_CODE)
-    IF (${PROJECT_NAME}_ENABLE_SECONDARY_TESTED_CODE)
-      MESSAGE(
-        "WARNING: Set deprecated ${PROJECT_NAME}_ENABLE_SECONDARY_STABLE_CODE and"
-        " updated ${PROJECT_NAME}_ENABLE_SECONDARY_TESTED_CODE at the same time!")
-    ENDIF()
-      MESSAGE(
-        "WARNING: Set var ${PROJECT_NAME}_ENABLE_SECONDARY_STABLE_CODE is deprecated!"
-        "  Use ${PROJECT_NAME}_ENABLE_SECONDARY_TESTED_CODE instead!")
-    SET(${PROJECT_NAME}_ENABLE_SECONDARY_TESTED_CODE ON)
-  ENDIF()
-
-  # We must set ${PROJECT_NAME}_ENABLE_SECONDARY_STABLE_CODE since many
-  # TriBITS packages expect this to be set!
-  SET(${PROJECT_NAME}_ENABLE_SECONDARY_STABLE_CODE
-    ${${PROJECT_NAME}_ENABLE_SECONDARY_TESTED_CODE})
+  MESSAGE("NOTE: ${PROJECT_NAME}_ENABLE_SECONDARY_TESTED_CODE=${${PROJECT_NAME}_ENABLE_SECONDARY_TESTED_CODE}")
 
   IF (${PROJECT_NAME}_UNENABLE_ENABLED_PACKAGES)
     MESSAGE("")
