@@ -1067,9 +1067,6 @@ FUNCTION(TRIBITS_CTEST_DRIVER)
 
   SET_DEFAULT_AND_FROM_ENV( ${PROJECT_NAME}_ENABLE_SECONDARY_TESTED_CODE OFF )
 
-  # ${PROJECT_NAME}_ENABLE_SECONDARY_STABLE_CODE is deprecated!
-  SET_DEFAULT_AND_FROM_ENV( ${PROJECT_NAME}_ENABLE_SECONDARY_STABLE_CODE OFF )
-
   # List of additional packges that will be enabled over the current set
   # of all packagess (that would be set by ${PROJECT_NAME}_ENABLE_ALL_PACKAGES).
   SET_DEFAULT_AND_FROM_ENV( ${PROJECT_NAME}_ADDITIONAL_PACKAGES "" )
@@ -1600,14 +1597,9 @@ FUNCTION(TRIBITS_CTEST_DRIVER)
       LIST(APPEND CONFIGURE_OPTIONS
       "-D${PROJECT_NAME}_DEPS_XML_OUTPUT_FILE:FILEPATH=")
     ENDIF()
-    IF (${PROJECT_NAME}_ENABLE_SECONDARY_TESTED_CODE)
+    IF (NOT "${${PROJECT_NAME}_ENABLE_SECONDARY_TESTED_CODE}" STREQUAL "")
       LIST(APPEND CONFIGURE_OPTIONS
-        "-D${PROJECT_NAME}_ENABLE_SECONDARY_TESTED_CODE:BOOL=ON")
-    ENDIF()
-    # ${PROJECT_NAME}_ENABLE_SECONDARY_STABLE_CODE is deprecated!
-    IF (${PROJECT_NAME}_ENABLE_SECONDARY_STABLE_CODE)
-      LIST(APPEND CONFIGURE_OPTIONS
-        "-D${PROJECT_NAME}_ENABLE_SECONDARY_STABLE_CODE:BOOL=ON")
+        "-D${PROJECT_NAME}_ENABLE_SECONDARY_TESTED_CODE:BOOL=${${PROJECT_NAME}_ENABLE_SECONDARY_TESTED_CODE}")
     ENDIF()
     IF (NOT MPI_EXEC_MAX_NUMPROCS STREQUAL 0)
       LIST(APPEND CONFIGURE_OPTIONS
