@@ -4,6 +4,8 @@ Explicitly disabled SE packages on input (by user or by default):  ThyraCrazyStu
 Explicitly enabled TPLs on input (by user):  Boost 1
 Explicitly disabled TPLs on input (by user or by default):  0
 
+NOTE: Trilinos_ENABLE_SECONDARY_TESTED_CODE=ON
+
 Enabling subpackages for hard enables of parent packages due to \
  Trilinos_ENABLE_<PARENT_PACKAGE>=ON ...
 
